--- a/www/index.html
+++ b/www/index.html
@@ -2,9 +2,21 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <title>Epinotes</title>
+        <link rel="icon" href="img/favicon.png"/>
+        <link rel="stylesheet" href="css/master.css"/>
+        <script src="js/index.js"></script>
         <!-- insert head content here -->
     </head>
     <body>
+        <nav>
+            <a href="#">link 1</a>
+            <a href="#">link 2</a>
+            <a href="#">link 3</a>
+            <a href="#">link 4</a>
+            <a href="#">link 5</a>
+        </nav>
+        <div></div>
         <!-- insert body content here -->
     </body>
 </html>
