--- a/www/index.html
+++ b/www/index.html
@@ -10,11 +10,21 @@
     </head>
     <body>
         <nav>
-            <a href="#">link 1</a>
-            <a href="#">link 2</a>
-            <a href="#">link 3</a>
-            <a href="#">link 4</a>
-            <a href="#">link 5</a>
+            <a href="#">
+                <img alt="Epinotes" src="img/logo.png">
+            </a>
+            <a href="#"> 
+                <b class="item"> Notes </b>
+            </a>
+            <a href="#"> 
+                <b class="item"> Profile </b>
+            </a>
+            <a href="#"> 
+                <b class="item"> About </b>
+            </a>
+            <a href="#"> 
+                <b class="item"> Log out </b>
+            </a>
         </nav>
         <div></div>
         <!-- insert body content here -->
