--- a/www/index.html
+++ b/www/index.html
@@ -13,17 +13,17 @@
             <a href="#">
                 <img alt="Epinotes" src="img/logo.png">
             </a>
-            <a href="#"> 
-                <b class="item"> Notes </b>
+            <a href="#" class= ".item">
+                Notes
             </a>
-            <a href="#"> 
-                <b class="item"> Profile </b>
+            <a href="#" class= ".item">
+                Profile
             </a>
-            <a href="#"> 
-                <b class="item"> About </b>
+            <a href="#" class= ".item">
+                About
             </a>
-            <a href="#"> 
-                <b class="item"> Log out </b>
+            <a href="#" class= ".item">
+                Log out
             </a>
         </nav>
         <div></div>
