--- a/www/index.html
+++ b/www/index.html
@@ -13,17 +13,25 @@
             <a href="#">
                 <img alt="Epinotes" src="img/logo.png">
             </a>
-            <a href="#" class= ".item">
-                Notes
+            <a href="#">
+                <b class= ".item">
+                    Notes
+                </b>
             </a>
-            <a href="#" class= ".item">
-                Profile
+            <a href="#">
+                <b class= ".item">
+                    Profile
+                </b>
             </a>
-            <a href="#" class= ".item">
-                About
+            <a href="#">
+                <b class= ".item">
+                    About
+                </b>
             </a>
-            <a href="#" class= ".item">
-                Log out
+            <a href="#">
+                <b class= ".item">
+                    Log out
+                </b>
             </a>
         </nav>
         <div></div>
