--- a/www/index.html
+++ b/www/index.html
@@ -13,28 +13,44 @@
             <a href="#">
                 <img alt="Epinotes" src="img/logo.png">
             </a>
-            <a href="#">
-                <b class= ".item">
-                    Notes
-                </b>
+            <a href="#" class="item">
+                Notes
             </a>
-            <a href="#">
-                <b class= ".item">
-                    Profile
-                </b>
+            <a href="#" class="item">
+                Profile
             </a>
-            <a href="#">
-                <b class= ".item">
-                    About
-                </b>
+            <a href="#" class="item">
+                About
             </a>
-            <a href="#">
-                <b class= ".item">
-                    Log out
-                </b>
+            <a href="#" class="item">
+                Log out
             </a>
         </nav>
-        <div></div>
+        <div>
+            <div class="centered">
+                <input id="search-input" placeholder="Search">
+            </div>
+            <div class="notes">
+                <div class="note">
+                    <h1>Don't panic</h1>
+                    <p>
+                        <embed src="../res/note0.txt">
+                    </p>
+                </div>
+                <div class="note">
+                    <h1>So long</h1>
+                    <p>
+                        <embed src="../res/note1.txt">
+                    </p>
+                </div>
+                <div class="note">
+                    <h1>Time is an illusion.</h1>
+                    <p>
+                        <embed src="../res/note2.txt">
+                    </p>
+                </div>
+            </div>
+        </div>
         <!-- insert body content here -->
     </body>
 </html>
