--- a/www/index.html
+++ b/www/index.html
@@ -13,18 +13,10 @@
             <a href="#">
                 <img alt="Epinotes" src="img/logo.png">
             </a>
-            <a href="#" class="item">
-                Notes
-            </a>
-            <a href="#" class="item">
-                Profile
-            </a>
-            <a href="#" class="item">
-                About
-            </a>
-            <a href="#" class="item">
-                Log out
-            </a>
+            <a href="#" class="item" title="Notes">Notes</a>
+            <a href="#" class="item" title="Profile">Profile</a>
+            <a href="#" class="item" title="About">About</a>
+            <a href="#" class="item" title="Log out">Log out</a>
         </nav>
         <div>
             <div class="centered">
