--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
             <a href="#" class="item" title="About">About</a>
             <a href="#" class="item" title="Log out">Log out</a>
         </nav>
-        <div>
+        <div class="container">
             <div class="centered">
                 <input id="search-input" placeholder="Search">
             </div>
